issue #1772 First working version.

--- a/examples/psyad/lfric/tangent_linear/Makefile
+++ b/examples/psyad/lfric/tangent_linear/Makefile
@@ -68,7 +68,16 @@ transform:
 	$(MAKE) single -e TL_KERNEL_NAME=combine_w2_field_kernel ACTIVE_VAR_LIST="uvw w uv"
 	$(MAKE) single -e TL_KERNEL_NAME=split_w2_field_kernel ACTIVE_VAR_LIST="uvw w uv"
 	$(MAKE) single -e TL_KERNEL_NAME=sample_flux_kernel ACTIVE_VAR_LIST="flux u"
-	$(MAKE) single -e TL_KERNEL_NAME=helmholtz_operator_kernel ACTIVE_VAR_LIST="helm_c f_op helm_dd helm_uu helm_d helm_u helm_s helm_n helm_w helm_e d_op ec_op m3_exner_star p3theta compound_div"
+	#
+	# The arguments to helmholtz_operator_kernel do not conform to
+	# those expected by the metadata. I presume this is a
+	# psykalite kernel. This causes psyad to fail when updating
+	# the adjoint metadata description. It can be seen that the
+	# arguments differ by looking at the number of arguments at
+	# the start of the argument list. Two are expected (cell and
+	# nlayers) but a load of stencil information is passed first.
+	#
+	# $(MAKE) single -e TL_KERNEL_NAME=helmholtz_operator_kernel ACTIVE_VAR_LIST="helm_c f_op helm_dd helm_uu helm_d helm_u helm_s helm_n helm_w helm_e d_op ec_op m3_exner_star p3theta compound_div"
 	$(MAKE) single -e TL_KERNEL_NAME=tracer_viscosity_kernel ACTIVE_VAR_LIST="theta_inc viscosity_mu"
 	$(MAKE) single -e TL_KERNEL_NAME=dg_matrix_vector_kernel ACTIVE_VAR_LIST="lhs lhs_e x x_e"
 	$(MAKE) single -e TL_KERNEL_NAME=w2_to_w1_projection_kernel ACTIVE_VAR_LIST="v_w1 u_w2 vu res_dot_product wind"
