#2172 rm unnecessary deps from Makefile

--- a/tutorial/practicals/LFRic/building_code/1_simple_kernels/part2/Makefile
+++ b/tutorial/practicals/LFRic/building_code/1_simple_kernels/part2/Makefile
@@ -88,9 +88,9 @@ $(LFRIC_LIB):
 	$(MAKE) -C $(LFRIC_PATH)
 
 # Dependencies
-$(DRIVER_OBJ): $(ALGORITHM_OBJ) $(PSY_OBJ) $(KERNEL_OBJ) $(LFRIC_LIB)
-$(ALGORITHM_OBJ): $(PSY_OBJ) $(KERNEL_OBJ) $(LFRIC_LIB)
-$(PSY_OBJ): $(KERNEL_OBJ) $(LFRIC_LIB)
+$(DRIVER_OBJ): $(ALGORITHM_OBJ)
+$(ALGORITHM_OBJ): $(PSY_OBJ)
+$(PSY_OBJ): $(KERNEL_OBJ)
 $(KERNEL_OBJ): $(LFRIC_LIB)
 
 %.o %.mod: %.F90
