#2238 Fix compilation workflow

--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -66,7 +66,7 @@ jobs:
         commit-filter: '[skip ci]'
     - name: Install dependencies
       run: |
-        module load python/3.11.3
+        module load python
         python -m venv .runner_venv
         . .runner_venv/bin/activate
         python -m pip install --upgrade pip
@@ -77,6 +77,5 @@ jobs:
         pip install .[test]
     - name: Test with pytest and compilation
       run: |
-        module load python/3.11.3
         . .runner_venv/bin/activate
         pytest -n 2 --f90=gfortran --compile src/psyclone/tests
