--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -50,6 +50,11 @@ name: Compilation tests
 on:
   push
 
+env:
+  PYTHON_VERSION: 3.11.4
+  GFORTRAN_VERSION: 13.1.0
+  NVFORTRAN_VERSION: 23.5
+
 jobs:
   run_if_on_mirror:
     # Only PSyclone-mirror has the necessary self-hosted runner.
@@ -70,7 +75,7 @@ jobs:
         commit-filter: '[skip ci]'
     - name: Install dependencies
       run: |
-        module load python/3.11.4
+        module load python/${PYTHON_VERSION}
         python -m venv .runner_venv
         . .runner_venv/bin/activate
         python -m pip install --upgrade pip
@@ -81,47 +86,47 @@ jobs:
         pip install .[test,psydata]
     - name: Unit tests with compilation - gfortran
       run: |
-        module load python/3.11.4
+        module load python/${PYTHON_VERSION}
         . .runner_venv/bin/activate
-        module load gcc/13.1.0 openmpi netcdf_fortran
+        module load gcc/${GFORTRAN_VERSION} openmpi netcdf_fortran
         pytest -n 2 --f90=gfortran --compile --compileopencl src/psyclone/tests
         module rm netcdf_fortran gcc
     - name: Unit tests with compilation - nvfortran
       run: |
-        module load python/3.11.4
+        module load python/${PYTHON_VERSION}
         . .runner_venv/bin/activate
-        module load nvidia-hpcsdk/23.5 netcdf_fortran
+        module load nvidia-hpcsdk/${NVFORTRAN_VERSION} netcdf_fortran
         # We have to tell nvfortran where to find the OpenCL library.
-        pytest -n 2 --f90=nvfortran --f90flags="-L/apps/packages/compilers/nvidia-hpcsdk/Linux_x86_64/23.5/cuda/12.1/targets/x86_64-linux/lib" --compile --compileopencl src/psyclone/tests
+        pytest -n 2 --f90=nvfortran --f90flags="-L/apps/packages/compilers/nvidia-hpcsdk/Linux_x86_64/${NVFORTRAN_VERSION}/cuda/12.1/targets/x86_64-linux/lib" --compile --compileopencl src/psyclone/tests
         module rm netcdf_fortran nvidia-hpcsdk
     - name: Examples with compilation - gfortran
       run: |
-        module load python/3.11.4
+        module load python/${PYTHON_VERSION}
         . .runner_venv/bin/activate
-        module load gcc/13.1.0 openmpi netcdf_fortran
+        module load gcc/${GFORTRAN_VERSION} openmpi netcdf_fortran
         # Although we're using gfortran, we link with the OpenCL lib that comes
         # with CUDA.
         make -C examples allclean
-        F90=gfortran F90FLAGS="-L/apps/packages/compilers/nvidia-hpcsdk/Linux_x86_64/23.5/cuda/12.1/targets/x86_64-linux/lib" make -C examples compile
+        F90=gfortran F90FLAGS="-L/apps/packages/compilers/nvidia-hpcsdk/Linux_x86_64/${NVFORTRAN_VERSION}/cuda/12.1/targets/x86_64-linux/lib" make -C examples compile
     - name: Tutorials with compilation - gfortran
       run: |
-        module load python/3.11.4
+        module load python/${PYTHON_VERSION}
         . .runner_venv/bin/activate
         make -C tutorial/practicals allclean
-        module load gcc/13.1.0 openmpi netcdf_fortran
+        module load gcc/${GFORTRAN_VERSION} openmpi netcdf_fortran
         make -C tutorial/practicals compile
     - name: Examples with compilation - nvfortran
       run: |
-        module load python/3.11.4
+        module load python/${PYTHON_VERSION}
         . .runner_venv/bin/activate
         make -C examples allclean
-        module load nvidia-hpcsdk/23.5 netcdf_fortran
+        module load nvidia-hpcsdk/${NVFORTRAN_VERSION} netcdf_fortran
         # We have to tell nvfortran where to find the OpenCL library.
-        F90=nvfortran F90FLAGS="-acc -Minfo=all -L/apps/packages/compilers/nvidia-hpcsdk/Linux_x86_64/23.5/cuda/12.1/targets/x86_64-linux/lib" make -C examples compile
+        F90=nvfortran F90FLAGS="-acc -Minfo=all -L/apps/packages/compilers/nvidia-hpcsdk/Linux_x86_64/${NVFORTRAN_VERSION}/cuda/12.1/targets/x86_64-linux/lib" make -C examples compile
     - name: Tutorials with compilation - nvfortran
       run: |
-        module load python/3.11.4
+        module load python/${PYTHON_VERSION}
         . .runner_venv/bin/activate
         make -C tutorial/practicals allclean
-        module load nvidia-hpcsdk/23.5 netcdf_fortran
+        module load nvidia-hpcsdk/${NVFORTRAN_VERSION} netcdf_fortran
         F90=nvfortran F90FLAGS="-acc -Minfo=all" make -C tutorial/practicals compile
