--- a/tutorial/training/2.4-GameOfLife-psyclone/Makefile
+++ b/tutorial/training/2.4-GameOfLife-psyclone/Makefile
@@ -1,23 +1,11 @@
 EXE = gol
 API = gocean
 
+OBJ = time_step_alg_mod.o time_step_alg_mod_psy.o
+
 include ../common.mk
 
-SRC = gol.f90 read_config_mod.f90 compute_die_mod.f90               \
-	  compute_born_mod.f90 combine_mod.f90 count_neighbours_mod.f90 \
-	  output_field_mod.f90
-PSY_SRC = time_step_alg_mod.x90 
-
-OBJ = $(SRC:%.f90=%.o) $(PSY_SRC:%.x90=%.o) $(PSY_SRC:%.x90=%_psy.o)
-
-.PHONY: allclean clean
-
-# Limit output to 132 charactere
-PSYCLONE=psyclone --config $(ROOT_DIR)/config/psyclone.cfg \
-		-l output -nodm  \
-		-s ./inline.py
-
-$(EXE): $(INF_LIB) $(OBJ)
+$(EXE): $(OBJ)
 	$(F90) $(F90FLAGS) $(OBJ) $(LDFLAGS) -o $(EXE)
 
 run: $(EXE)
@@ -28,23 +16,12 @@ test: $(EXE)
 
 # Dependencies:
 # -------------
-gol.o: read_config_mod.o time_step_alg_mod.o
-time_step_alg_mod.o: combine_mod.o compute_born_mod.o compute_die_mod.o \
-	count_neighbours_mod.o output_field_mod.o time_step_alg_mod_psy.o
-time_step_alg_mod_psy.o: compute_born_mod.o
+# Ensure that PSyclone has finished (which will also create the psy file)
+time_step_alg_mod_psy.f90: time_step_alg_mod.f90
+time_step_alg_mod.o: time_step_alg_mod_psy.o
 
-.precious: time_step_alg_mod.f90 time_step_alg_mod_psy.f90
-
-
+# PSyclone: create alg and psy layer files:
 time_step_alg_mod.f90: time_step_alg_mod.x90
-	$(PSYCLONE) -api gocean1.0 -oalg time_step_alg_mod.f90 \
-							   -opsy time_step_alg_mod_psy.f90 $<
-
-# Clean
-# -----
-
-clean:
-	rm -f $(OBJ) $(EXE) *.mod time_step_alg_mod.f90 time_step_alg_mod_psy.f90
-
-allclean: clean
-	$(MAKE) F90FLAGS="$(F90FLAGS)" -C $(INF_INC) clean
+	$(PSYCLONE) -nodm -api gocean1.0 -oalg time_step_alg_mod.f90     \
+								     -opsy time_step_alg_mod_psy.f90 \
+								     time_step_alg_mod.x90
