--- a/tutorial/training/2.12-GameOfLife-mpi/Makefile
+++ b/tutorial/training/2.12-GameOfLife-mpi/Makefile
@@ -1,20 +1,18 @@
-my_default:
-	MPI=yes F90=mpif90 $(MAKE) MPI=yes default
+#MPI=yes F90=mpif90 $(MAKE) MPI=yes default
 
 EXE = gol
 API = gocean
 MPI = yes
+F90 = mpif90
 
-include ../common.mk
-
-SRC = gol.f90 read_config_mod.f90
+SRC = read_config_mod.f90
 PSY_SRC = time_step_alg_mod.x90 
 
 OBJ = $(SRC:%.f90=%.o) $(PSY_SRC:%.x90=%.o) $(PSY_SRC:%.x90=%_psy.o)
 
-.PHONY: run test clean
+include ../common.mk
 
-$(EXE): $(INF_LIB) $(GOL_LIB) $(OBJ)
+$(EXE): $(OBJ)
 	$(F90) $(F90FLAGS) $(OBJ) $(LDFLAGS) -o $(EXE)
 
 run: $(EXE)
@@ -25,21 +23,10 @@ test: $(EXE)
 
 # Dependencies:
 # -------------
-gol.o: read_config_mod.o time_step_alg_mod.o
+# Ensure that PSyclone has finished (which will also create the psy file)
+time_step_alg_mod_psy.f90: time_step_alg_mod.f90
 time_step_alg_mod.o: time_step_alg_mod_psy.o
-
-
-.precious: time_step_alg_mod.f90 time_step_alg_mod_psy.f90
-
-#%.f90: %.x90
-#	$(PSYCLONE) -api gocean1.0 -oalg $*.f90 -opsy $*_psy.f90 $<
 
 time_step_alg_mod.f90: time_step_alg_mod.x90
 	$(PSYCLONE) -api gocean1.0 -oalg time_step_alg_mod.f90 \
 							   -opsy time_step_alg_mod_psy.f90 $<
-
-# Clean
-# -----
-
-clean:
-	rm -f $(OBJ) $(EXE) *.mod time_step_alg_mod.f90 time_step_alg_mod_psy.f90
