--- a/tutorial/training/2.8-GameOfLife-openmp/Makefile
+++ b/tutorial/training/2.8-GameOfLife-openmp/Makefile
@@ -1,15 +1,11 @@
 EXE = gol
 API = gocean
 
+OBJ = time_step_alg_mod.o time_step_alg_mod_psy.o
+
 include ../common.mk
 
-PSY_SRC = time_step_alg_mod.x90 
-
-OBJ = $(PSY_SRC:%.x90=%.o) $(PSY_SRC:%.x90=%_psy.o)
-
-.PHONY: clean run test
-
-$(EXE): $(INF_LIB) $(GOL_LIB) $(OBJ)
+$(EXE): $(OBJ)
 	$(F90) $(F90FLAGS) $(OBJ) $(LDFLAGS) -o $(EXE)
 
 run: $(EXE)
@@ -18,21 +14,14 @@ run: $(EXE)
 test: $(EXE)
 	./$(EXE) config.glider | tail -n 12 | diff - ./glider.correct
 
-%.f90: %.x90 Makefile
-	$(PSYCLONE) -api gocean1.0 -s ./fuse_loops.py -oalg $*.f90 -opsy $*_psy.f90 $<
-
 # Dependencies:
 # -------------
+# Ensure that PSyclone has finished (which will also create the psy file)
+time_step_alg_mod_psy.f90: time_step_alg_mod.f90
 time_step_alg_mod.o: time_step_alg_mod_psy.o
 
-.precious: time_step_alg_mod.f90 time_step_alg_mod_psy.f90
-
-%.f90: %.x90 openmp.py Makefile
-	$(PSYCLONE) -s ./openmp.py -api gocean1.0 -oalg $*.f90 -opsy $*_psy.f90 $<
-	#$(PSYCLONE) -s ./task.py -api gocean1.0 -oalg $*.f90 -opsy $*_psy.f90 $<
-
-# Clean
-# -----
-
-clean:
-	rm -f $(OBJ) $(EXE) *.mod time_step_alg_mod.f90 time_step_alg_mod_psy.f90
+# PSyclone: create alg and psy layer files:
+time_step_alg_mod.f90: time_step_alg_mod.x90
+	$(PSYCLONE)  -s  ./openmp.py -nodm -api gocean1.0 -oalg time_step_alg_mod.f90     \
+								     -opsy time_step_alg_mod_psy.f90 \
+								     time_step_alg_mod.x90
