--- a/tutorial/training/gol-lib/Makefile
+++ b/tutorial/training/gol-lib/Makefile
@@ -1,40 +1,25 @@
-EXE = libgol.a
 API = gocean
+default: libgol.a
 
 include ../common.mk
 
 SRC = gol.f90 read_config_mod.f90 compute_die_mod.f90               \
 	  compute_born_mod.f90 combine_mod.f90 count_neighbours_mod.f90 \
-	  output_field_mod.f90
-PSY_SRC = time_step_alg_mod.x90 
+	  output_field_mod.f90 time_step_alg_mod.f90 time_step_alg_mod_psy.f90
 
-OBJ = $(SRC:%.f90=%.o) $(PSY_SRC:%.x90=%.o) $(PSY_SRC:%.x90=%_psy.o)
-
-.PHONY: allclean clean
+OBJ = $(SRC:%.f90=%.o)
 
 libgol.a: $(INF_LIB) $(OBJ)
 	$(AR) $(ARFLAGS) libgol.a $(OBJ)
-
-run: $(EXE)
-	./$(EXE) ../config.glider
-
-test: $(EXE)
-	./$(EXE) ../config.glider | tail -n 12 | diff - ../glider.correct
-
-# Dependencies:
-# -------------
-gol.o: read_config_mod.o time_step_alg_mod.o
-time_step_alg_mod.o: combine_mod.o compute_born_mod.o compute_die_mod.o \
-	count_neighbours_mod.o output_field_mod.o time_step_alg_mod_psy.o
-time_step_alg_mod_psy.o: compute_born_mod.o
-
-.precious: time_step_alg_mod.f90 time_step_alg_mod_psy.f90
-
-%.f90: %.x90
-	$(PSYCLONE) -api gocean1.0 -oalg $*.f90 -opsy $*_psy.f90 $<
-
-# Clean
-# -----
+	# Remove the alg/psy layer files. They are required for compiling
+	# the libraries, but the main examples will provide their own
+	# version which must be used instead.
+	$(AR) d libgol.a time_step_alg_mod.o time_step_alg_mod_psy.o
 
 clean:
-	rm -f $(OBJ) $(EXE) *.mod
+	rm -f *.o *.mod libgol.a
+
+gol.o: read_config_mod.o time_step_alg_mod.o
+time_step_alg_mod.o:time_step_alg_mod_psy.o output_field_mod.o
+time_step_alg_mod_psy.o: combine_mod.o compute_born_mod.o compute_die_mod.o \
+	count_neighbours_mod.o
