--- a/tutorial/training/2.2-GameOfLife/Makefile
+++ b/tutorial/training/2.2-GameOfLife/Makefile
@@ -1,6 +1,8 @@
 EXE = gol
-API = gocean
+API = gocean1.0
 
+# Don't include gol-lib at link time, it is not required
+IGNORE_GOL_LIB=yes
 include ../common.mk
 
 SRC = gol.f90 read_config_mod.f90 time_step_mod.f90 compute_die_mod.f90 \
@@ -8,12 +10,10 @@ SRC = gol.f90 read_config_mod.f90 time_step_mod.f90 compute_die_mod.f90 \
 	  output_field_mod.f90
 OBJ = $(SRC:%.f90=%.o)
 
-.PHONY: allclean clean
-
-$(EXE): $(INF_LIB) $(OBJ)
+$(EXE): $(OBJ)
 	$(F90) $(F90FLAGS) $(OBJ) $(LDFLAGS) -o $(EXE)
 
-run: $(EXE)
+run: $(INF_LIB) $(EXE)
 	./$(EXE) config.glider
 
 test: $(EXE)
