--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -93,7 +93,14 @@ jobs:
     - uses: actions/setup-python@v4
     - run: python -m pip install --upgrade pip
     - run: pip install .[doc]
-    - run: cd doc/developer_guide; make doctest
+    # Sphinx since version 7.2 (7.2.0/1/2) aborts with
+    #   exec('from sympy import *', global_dict)
+    #   File "<string>", line 1, in <module>
+    #  AttributeError: module 'sympy' has no attribute 'external'
+    # when it is run without creating the documentation first.
+    # So till this is fixed in Sphinx, we trigger the creation
+    # of the html documents before actually running doctest
+    - run: cd doc/developer_guide; make html; make doctest
   build:
     if: ${{ github.repository != 'stfc/PSyclone-mirror' }}
     runs-on: ubuntu-latest
