#1623 Avoid 'overriding target' warning for clean.

--- a/tutorial/training/gol-lib/Makefile
+++ b/tutorial/training/gol-lib/Makefile
@@ -16,10 +16,12 @@ libgol.a: $(INF_LIB) $(OBJ)
 	# version which must be used instead.
 	$(AR) d libgol.a time_step_alg_mod.o time_step_alg_mod_psy.o
 
-clean:
-	rm -f *.o *.mod libgol.a
-
 gol.o: read_config_mod.o time_step_alg_mod.o
 time_step_alg_mod.o:time_step_alg_mod_psy.o output_field_mod.o
 time_step_alg_mod_psy.o: combine_mod.o compute_born_mod.o compute_die_mod.o \
 	count_neighbours_mod.o
+
+clean:
+	# We can't call the clean target in common.mk, since this would delete
+	# time_step_alg_mod*, which we need to compile gol.f
+	rm -f *.o *.mod libgol.a
