--- a/tutorial/training/2.12-GameOfLife-mpi/Makefile
+++ b/tutorial/training/2.12-GameOfLife-mpi/Makefile
@@ -13,8 +13,14 @@ $(EXE): $(OBJ)
 run: $(EXE)
 	mpirun -np 4 ./$(EXE) config.glider
 
-test: $(EXE)
-	mpirun -np 4 ./$(EXE) config.glider | tail -n 12 | diff - ./glider.correct
+# Call the default test (which checks the output file), but do a second test to make
+# sure we get a 2x2 domain decomposition, otherwise the job was not running properly
+# with MPI
+test: test-default
+	@bash -c "if [[ $$(make run | grep -c 'go_decompose: using grid of   2x  2') != 1 ]]; then \
+		echo 'Job is not running properly with MPI'; \
+	fi"
+
 
 # Dependencies:
 # -------------
