#1623 Moved run into common.mk, and config and KGO files into gol-lib.

--- a/tutorial/training/2.12-GameOfLife-mpi/Makefile
+++ b/tutorial/training/2.12-GameOfLife-mpi/Makefile
@@ -11,7 +11,7 @@ $(EXE): $(OBJ)
 	$(F90) $(F90FLAGS) $(OBJ) $(LDFLAGS) -o $(EXE)
 
 run: $(EXE)
-	mpirun -np 4 ./$(EXE) config.glider
+	mpirun -np 4 ./$(EXE) ../gol-lib/config.glider
 
 # Call the default test (which checks the output file), but do a second test to make
 # sure we get a 2x2 domain decomposition, otherwise the job was not running properly
