#1623 Renamed files to follow LFRic naming scheme.

--- a/tutorial/training/users/lfric/Makefile
+++ b/tutorial/training/users/lfric/Makefile
@@ -40,7 +40,7 @@
 F90 ?= gfortran
 F90FLAGS ?= -Wall -g -fcheck=bound
 
-OBJ = main_psy.o main_alg.o testkern_w3_kernel_mod.o
+OBJ = main_alg_psy.o main_alg.o testkern_w3_kernel_mod.o
 
 EXEC = example
 # Path of the included simplified LFRic infrastructure files:
@@ -56,10 +56,10 @@ F90FLAGS += $(LFRIC_INCLUDE_FLAGS)
 # ---------------
 .PHONY: transform compile run clean allclean
 
-transform: main_psy.f90
+transform: main_alg_psy.f90
 
 omp:
-	psyclone -s omp.py -nodm -l output -opsy main_omp_psy.f90 -oalg main_omp_alg.f90 main.x90
+	psyclone -s omp.py -nodm -l output -opsy main_omp_psy.f90 -oalg main_omp_alg.f90 main_alg.x90
 
 compile: transform $(EXEC)
 
@@ -82,9 +82,9 @@ $(LFRIC_LIB):
 
 # Dependencies
 # ------------
-main_alg.f90: main_psy.f90
-main_psy.o:	testkern_w3_kernel_mod.o
-main_alg.o:	main_psy.o
+main_alg.f90: main_alg_psy.f90
+main_alg_psy.o:	testkern_w3_kernel_mod.o
+main_alg.o:	main_alg_psy.o
 testkern_w3_kernel_mod.o: $(LFRIC_LIB)
 
 # File creation rules
@@ -93,7 +93,7 @@ testkern_w3_kernel_mod.o: $(LFRIC_LIB)
 	$(F90) $(F90FLAGS) $(LFRIC_INCLUDE_FLAGS) -c $<
 
 # Keep the generated psy and alg files
-.precious: main_psy.f90 main_alg.f90
+.precious: main_alg_psy.f90 main_alg.f90
 
 %_psy.f90:	%.x90
-	psyclone -nodm -l output -opsy $*_psy.f90 -oalg $*_alg.f90 $<
+	psyclone -nodm -l output -opsy $*_psy.f90 -oalg $*.f90 $<
