--- a/lib/profiling/Makefile
+++ b/lib/profiling/Makefile
@@ -41,9 +41,9 @@ F90 ?= gfortran
 F90FLAGS ?= -g
 # -----------------------------------------------------------------------------
 
-# We don't build dl_timer, drhook and nvidia since they require
+# We don't build dl_timer, drhook, tau, and nvidia since they require
 # external libraries to be available.
-ALL_LIBS = template simple_timing lfric_timer tau
+ALL_LIBS = template simple_timing lfric_timer
 
 .PHONY: default all $(ALL_LIBS) clean allclean
 
