#1623 Restructured README to have better sections and links to the solution. Moved MPI section up since it now works with the standard example.

--- a/tutorial/training/users/lfric/Makefile
+++ b/tutorial/training/users/lfric/Makefile
@@ -69,7 +69,7 @@ error2:
 	psyclone -s ./omp.py -nodm -l output -opsy main_err2_psy.f90 -oalg main_err2_alg.f90 main_err2_alg.x90
 
 mpi:
-	psyclone -dm -l output -opsy main_mpi_psy.f90 -oalg main_mpi_alg.f90 main_err2_alg.x90
+	psyclone -dm -l output -opsy main_mpi_psy.f90 -oalg main_mpi_alg.f90 main_alg.x90
 
 main_alg_psy.f90: main_alg.x90
 	psyclone -nodm -l output -opsy main_alg_psy.f90 -oalg main_alg.f90 main_alg.x90
