#1623 Fixed CI for all tests.

--- a/tutorial/training/users/lfric/5_alg_layer_error/Makefile
+++ b/tutorial/training/users/lfric/5_alg_layer_error/Makefile
@@ -60,7 +60,6 @@ F90FLAGS += $(LFRIC_INCLUDE_FLAGS)
 transform:
 	psyclone -nodm -l output -opsy main_alg_psy.f90 -oalg main_alg.f90 main_alg.x90
 
-
 compile: main_alg_psy.f90 $(EXEC)
 
 run: compile
@@ -85,7 +84,10 @@ main_alg_psy.f90: main_alg.x90
 	psyclone -nodm -l output -opsy main_alg_psy.f90 -oalg main_alg.f90 main_alg.x90
 
 # For PSyclone CI:
-test: transform
+test:
+	$(MAKE) transform 2>&1 | grep "kernel call 'no_setval_c' must either "\
+	"be named in a use statement" >/dev/null
+
 
 # External libraries - LFRic infrastructure
 # -----------------------------------------
